--- a/trunk/Specify/help/SpecifyHelp/Workbench/Chart.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Chart.html
@@ -19,8 +19,8 @@
 <p align="center"><img src="../images/chart.png" alt="Chart" ></p>
 <p align="center" class="imgcaption">Chart  Report </p>
 <p>&nbsp;</p>
-<p>Several control buttons for the report appear at the top of the Workspace. The buttons are shown in the diagram below:</p>
-<p><img src="../images/labelbuttons.png" alt="Label Buttons" ></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <p align="center" class="imgcaption">&nbsp;</p>
 <p></p>
 </body>
