--- a/trunk/Specify/help/SpecifyHelp/Workbench/EditMapping.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/EditMapping.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <head>
-<link rel="StyleSheet" href="../../main.css" rel="stylesheet" type="text/css" media="screen"></link>
+ <link href="../../main.css" rel="stylesheet" type="text/css" media="screen"></link>
 <title>Edit Data Set Mapping</title>
 </head>
 
 <body>
 <h2>Edit Data Set Mapping</h2>
-<hr>
+<hr />
 <p>To edit the Data Set Mapping, right-button click on the Data Setand a following context menu will appear: </p>
 <p align="center"><img src="../images/mappingbutton.png" alt="Mapping Button"></p>
 <p>Click on 'Edit Data Set Mapping'to display the Data Set Mapping Editor dialog:</p>
 <p align="center"><img src="../images/DataSetMappingEditor.png" alt="Data Set Mapping Editor"></p>
+<p align="center" class="imgcaption">Data Set Mapping Editor </p>
 <p>&nbsp;</p>
+<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered . The function of each button is described below:</p>
+<table width="75%" border="0" cellspacing="1" cellpadding="6">
+  <tr>
+    <td width="8%"><img src="../images/Map16x16.png" alt="map" width="16" height="16"></td>
+    <td width="14%">map</td>
+    <td width="78%">adds the field to the column list </td>
+  </tr>
+  <tr>
+    <td><img src="../images/Unmap16x16.png" alt="unmap" width="16" height="16"></td>
+    <td>unmap</td>
+    <td>removes the field from the list of columns </td>
+  </tr>
+  <tr>
+    <td><img src="../images/ReorderUp16x16.png" alt="reorderup" width="16" height="16"></td>
+    <td>reorder up </td>
+    <td>moves the selected field up </td>
+  </tr>
+  <tr>
+    <td><img src="../images/ReorderDown16x16.png" alt="reorderdown" width="16" height="16"></td>
+    <td>reorder down </td>
+    <td>moves the selected field down </td>
+  </tr>
+</table>
 <p>&nbsp;</p>
+<p>To  unmap a Column to a Field:</p>
+<ol>
+  <li>Click on the column to select it </li>
+  <li>Click the <img src="../images/Unmap16x16.png" alt="unmap" width="16" height="16"> (unmap) button </li>
+</ol>
+<p>To add a column </p>
+<ol>
+  <li>Click on the Data Type to show the Specify fields in the 'Fields' window </li>
+  <li>Click on the Specify field</li>
+  <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
+</ol>
+<p>A <img src="../images/linked_right.png" alt="link" width="32" height="16"> (link) icon will appear identifying that the column and field are the same heading. </p>
+<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check in the window to identify that they are in use. </p>
 <p>&nbsp; </p>
 </body>
 </html>
